// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 1`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="-1"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--multiple"
    >
      <ul
        class="rc-tree-select-selection__rendered"
        role="menubar"
      >
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0
          </span>
        </li>
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0-0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0-0
          </span>
        </li>
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0-0-0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0-0-0
          </span>
        </li>
        <li
          class="rc-tree-select-search rc-tree-select-search--inline"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              style="width: 0px;"
              type="text"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </li>
      </ul>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--multiple rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
            />
            <span
              class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
              title="0"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                0
              </span>
            </span>
            <ul
              class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
              data-expanded="true"
              role="group"
            >
              <li
                class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
                role="treeitem"
              >
                <span
                  class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                />
                <span
                  class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                />
                <span
                  class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                  title="0-0"
                >
                  <span
                    class="rc-tree-select-tree-title"
                  >
                    0-0
                  </span>
                </span>
                <ul
                  class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked"
                    role="treeitem"
                  >
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 2`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="-1"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--multiple"
    >
      <ul
        class="rc-tree-select-selection__rendered"
        role="menubar"
      >
        <li
          class="rc-tree-select-search rc-tree-select-search--inline"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              style="width: 0px;"
              type="text"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </li>
      </ul>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--multiple rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
            />
            <span
              class="rc-tree-select-tree-checkbox"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
              title="0"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                0
              </span>
            </span>
            <ul
              class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
              data-expanded="true"
              role="group"
            >
              <li
                class="rc-tree-select-tree-treenode-switcher-open"
                role="treeitem"
              >
                <span
                  class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                />
                <span
                  class="rc-tree-select-tree-checkbox"
                />
                <span
                  class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                  title="0-0"
                >
                  <span
                    class="rc-tree-select-tree-title"
                  >
                    0-0
                  </span>
                </span>
                <ul
                  class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class="rc-tree-select-tree-treenode-switcher-open"
                    role="treeitem"
                  >
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 1`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="-1"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--multiple"
    >
      <ul
        class="rc-tree-select-selection__rendered"
        role="menubar"
      >
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0
          </span>
        </li>
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0-0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0-0
          </span>
        </li>
        <li
          class="rc-tree-select-selection__choice"
          role="menuitem"
          style="user-select: none;"
          title="0-0-0"
          unselectable="unselectable"
        >
          <span
            class="rc-tree-select-selection__choice__remove"
          />
          <span
            class="rc-tree-select-selection__choice__content"
          >
            0-0-0
          </span>
        </li>
        <li
          class="rc-tree-select-search rc-tree-select-search--inline"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              style="width: 0px;"
              type="text"
              value="0"
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
              0 
            </span>
          </span>
        </li>
      </ul>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--multiple rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
            />
            <span
              class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
              title="0"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                0
              </span>
            </span>
            <ul
              class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
              data-expanded="true"
              role="group"
            >
              <li
                class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
                role="treeitem"
              >
                <span
                  class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                />
                <span
                  class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                />
                <span
                  class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                  title="0-0"
                >
                  <span
                    class="rc-tree-select-tree-title"
                  >
                    0-0
                  </span>
                </span>
                <ul
                  class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class="rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked filter-node"
                    role="treeitem"
                  >
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 2`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="-1"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--multiple"
    >
      <ul
        class="rc-tree-select-selection__rendered"
        role="menubar"
      >
        <li
          class="rc-tree-select-search rc-tree-select-search--inline"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              style="width: 0px;"
              type="text"
              value="0"
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
              0 
            </span>
          </span>
        </li>
      </ul>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--multiple rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open filter-node"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
            />
            <span
              class="rc-tree-select-tree-checkbox"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
              title="0"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                0
              </span>
            </span>
            <ul
              class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
              data-expanded="true"
              role="group"
            >
              <li
                class="rc-tree-select-tree-treenode-switcher-open filter-node"
                role="treeitem"
              >
                <span
                  class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                />
                <span
                  class="rc-tree-select-tree-checkbox"
                />
                <span
                  class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                  title="0-0"
                >
                  <span
                    class="rc-tree-select-tree-title"
                  >
                    0-0
                  </span>
                </span>
                <ul
                  class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
                  data-expanded="true"
                  role="group"
                >
                  <li
                    class="rc-tree-select-tree-treenode-switcher-open filter-node"
                    role="treeitem"
                  >
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
